# localplus

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  go.mod  go.sum
.github/workflows/: build.yml
.sqlx/: query-9ab9afae8f46592ae7d471816b95e30909b79ca44ff3dc0ddca0d7c35953ad4a.json  query-b4d9c64225b80a4091422df6568c96da2ce81e8af7f097820b41e356b710c2bd.json  query-c57e47215e659105d44d106966e606b87bfe013c1a401029d05f00d3205afa67.json  query-cd46e9cdd092c51c9785f3243b1986d4cf95a9b8b0fd19d79ebf1c5c2150bb21.json
cmd/: main.go
internal/handlers/: quiz_handler.go  template_handler.go
internal/models/: errors.go  question.go  quiz.go
internal/repository/: question_repository.go  quiz_repository.go  repository.go  sqlite_repository.go
internal/service/: quiz_service.go
src/: config.rs  main.rs  routes.rs
src/handlers/: mod.rs  quiz_handler.rs
src/models/: mod.rs  quiz.rs
static/: main.css
static/css/: main.css  style.css
static/js/: nav.js  quiz.js  script.js  theme.js
templates/: 404.html  base.html  index.html  quiz.html  quiz_end.html  quiz_start.html
templates/class7/: completed.html  index.html  quiz.html
templates/components/: footer.html  nav.html
